@@ -1,12 +1,20 @@
 package com.edgn.ui.core.models.slider;
 
 public class IntSliderModel implements SliderModel<Integer> {
-    private int value, min, max, step;
+    private int value;
+    private int min;
+    private int max;
+    private int step;
 
     public IntSliderModel() { this(0, 0, 100, 1); }
     public IntSliderModel(int value, int min, int max, int step) {
-        if (max < min) { int t=min; min=max; max=t; }
-        this.min = min; this.max = max; this.step = Math.max(1, step);
+        if (max < min) {
+            int t=min;
+            min=max;
+            max=t; }
+        this.min = min;
+        this.max = max;
+        this.step = Math.max(1, step);
         set(value);
     }
 
@@ -16,35 +24,45 @@ public class IntSliderModel implements SliderModel<Integer> {
     @Override public Integer min(){ return min; }
     @Override public Integer max(){ return max; }
     @Override public void setRange(Integer mi, Integer ma) {
-        if (ma < mi) { int t=mi; mi=ma; ma=t; }
-        this.min = mi; this.max = ma;
+        if (ma < mi) {
+            int t=mi; mi=ma;
+            ma=t;
+        }
+        this.min = mi;
+        this.max = ma;
         set(value);
     }
 
     @Override public Integer step(){ return step; }
-    @Override public void setStep(Integer s){ this.step = Math.max(1, s); set(value); }
+    @Override public void setStep(Integer s){
+        this.step = Math.max(1, s);
+        set(value);
+    }
 
-    @Override public Integer clampSnap(Integer v) {
-        int x = Math.max(min, Math.min(max, v));
+    @Override
+    public Integer clampSnap(Integer v) {
+        int x = Math.clamp(v, min, max);
         int rel = x - min;
         int r = rel % step;
         if (r != 0) {
-            x = x - r;
+            x -= r;
             if (r * 2 >= step) x += step;
         }
-        return Math.max(min, Math.min(max, x));
+        return Math.clamp(x, min, max);
     }
 
-    @Override public Integer ratioToValue(double t) {
-        t = Math.max(0, Math.min(1, t));
+    @Override
+    public Integer ratioToValue(double t) {
+        t = Math.clamp(t, 0.0, 1.0);
         int usable = max - min;
-        int raw = (int)Math.round(min + t * usable);
+        int raw = (int) Math.round(min + t * usable);
         return clampSnap(raw);
     }
 
-    @Override public double valueToRatio(Integer v) {
-        int x = Math.max(min, Math.min(max, v));
-        int usable = Math.max(1, max - min);
+    @Override
+    public double valueToRatio(Integer v) {
+        int x = Math.clamp(v, min, max);
+        int usable = Math.clamp((long) max - min, 1, Integer.MAX_VALUE);
         return (x - min) / (double) usable;
     }
 }
